--- a/SAO_Kirito.theme.css
+++ b/SAO_Kirito.theme.css
@@ -8,7 +8,7 @@
 /* SETTINGS */
 @import url('https://github.com/Manoa17/SAO_Kirito.git')
 
-@import url('https://github.com/Manoa17/SAO_Sworld');
+@import url('git@github.com:Manoa17/Sworld-Art-Online-.git');
 :root{
   /* ACCENT COLORS */
   --main-color: #2780e6; /* main accent color (hex, rgb or hsl) [default: #2780e6] */
